--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"app/layout.jsx"
+		"app/layout.jsx",
+		"prisma/client.tsx"
 	],
 	"exclude": ["node_modules"]
 }
